# skills

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json
plugins/lm-mem/: .codex-mcp.json  .mcp.json  README.md  backend.py  chroma-backend.sh  db.py  helpers.py  lm-memory.py  manage.py  mcp_tools.py  memory_utils.py  pyproject.toml  server.py  setup.sh  test_server.py  web.py
plugins/lm-mem/.claude-plugin/: plugin.json
plugins/lm-mem/.codex-plugin/: plugin.json
plugins/lm-mem/skills/memory/: SKILL.md
plugins/lm-mem/systemd/: install.sh  lm-mem-backend.service  lm-mem-web.service  uninstall.sh
plugins/lm-mem/tests/: conftest.py  test_backend.py  test_bulk.py  test_memory_crud.py  test_search.py  test_ttl.py
skills/hello-script/: SKILL.md
skills/hello-script/scripts/: greet.sh
skills/hello-world/: SKILL.md
