[project]
name = "memory-mcp"
version = "0.1.0"
description = "Claude 本地语义记忆 MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "chromadb>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test_server.py"]
